; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_network_out.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/adt/extr_network.c_network_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_INVALID_BINARY_REPRESENTATION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"could not format inet value: %m\00", align 1
@.str.1 = private unnamed_addr constant [4 x i8] c"/%u\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*, i32)* @network_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @network_out(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [50 x i8], align 16
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %8 = load i32*, i32** %3, align 8
  %9 = call i32 @ip_family(i32* %8)
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @ip_addr(i32* %10)
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @ip_bits(i32* %12)
  %14 = getelementptr inbounds [50 x i8], [50 x i8]* %5, i64 0, i64 0
  %15 = call i8* @pg_inet_net_ntop(i32 %9, i32 %11, i32 %13, i8* %14, i32 50)
  store i8* %15, i8** %6, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %24

18:                                               ; preds = %2
  %19 = load i32, i32* @ERROR, align 4
  %20 = load i32, i32* @ERRCODE_INVALID_BINARY_REPRESENTATION, align 4
  %21 = call i32 @errcode(i32 %20)
  %22 = call i32 @errmsg(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %23 = call i32 @ereport(i32 %19, i32 %22)
  br label %24

24:                                               ; preds = %18, %2
  %25 = load i32, i32* %4, align 4
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %27, label %45

27:                                               ; preds = %24
  %28 = getelementptr inbounds [50 x i8], [50 x i8]* %5, i64 0, i64 0
  %29 = call i32* @strchr(i8* %28, i8 signext 47)
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %45

31:                                               ; preds = %27
  %32 = getelementptr inbounds [50 x i8], [50 x i8]* %5, i64 0, i64 0
  %33 = call i32 @strlen(i8* %32)
  store i32 %33, i32* %7, align 4
  %34 = getelementptr inbounds [50 x i8], [50 x i8]* %5, i64 0, i64 0
  %35 = load i32, i32* %7, align 4
  %36 = sext i32 %35 to i64
  %37 = getelementptr inbounds i8, i8* %34, i64 %36
  %38 = load i32, i32* %7, align 4
  %39 = sext i32 %38 to i64
  %40 = sub i64 50, %39
  %41 = trunc i64 %40 to i32
  %42 = load i32*, i32** %3, align 8
  %43 = call i32 @ip_bits(i32* %42)
  %44 = call i32 @snprintf(i8* %37, i32 %41, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i32 %43)
  br label %45

45:                                               ; preds = %31, %27, %24
  %46 = getelementptr inbounds [50 x i8], [50 x i8]* %5, i64 0, i64 0
  %47 = call i8* @pstrdup(i8* %46)
  ret i8* %47
}

declare dso_local i8* @pg_inet_net_ntop(i32, i32, i32, i8*, i32) #1

declare dso_local i32 @ip_family(i32*) #1

declare dso_local i32 @ip_addr(i32*) #1

declare dso_local i32 @ip_bits(i32*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32* @strchr(i8*, i8 signext) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1

declare dso_local i8* @pstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
